get_next_url and can_fetch_page methods

--- a/tp1_crawler/Coding Dojo - Crawler.ipynb
+++ b/tp1_crawler/Coding Dojo - Crawler.ipynb
@@ -336,27 +336,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Verificação da ordem das URLs...F\n",
-      "======================================================================\n",
-      "FAIL: test_add_remove_page (__main__.SchedulerTest)\n",
+      "Verificação da ordem das URLs...\n",
+      "Resgatando a segunda página do mesmo dominio...\n",
+      "Tempo esperado: 20 segundos\n",
+      ".\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\steff\\Desktop\\File\\College\\OP\\info-retrieval\\tp1_crawler\\crawler\\scheduler_test.py\", line 66, in test_add_remove_page\n",
-      "    self.assertTrue(arr_url_order[i] is not None,msg=f\"A {i+1}ª URL não deveria ser none\")\n",
-      "AssertionError: False is not true : A 1ª URL não deveria ser none\n",
+      "Ran 1 test in 20.000s\n",
       "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "FAILED (failures=1)\n",
-      "\n"
+      "OK\n"
      ]
     }
    ],
@@ -373,26 +367,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
      "output_type": "stream",
+     "name": "stderr",
      "text": [
-      "F\n",
-      "======================================================================\n",
-      "FAIL: test_can_fetch (__main__.SchedulerTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\steff\\Desktop\\File\\College\\OP\\info-retrieval\\tp1_crawler\\crawler\\scheduler_test.py\", line 88, in test_can_fetch\n",
-      "    self.assertTrue(obj_url_not_allowed.netloc in self.scheduler.dic_robots_per_domain,msg=f\"O domínio '{obj_url_not_allowed.netloc}' não foi encontrado\")\n",
-      "AssertionError: False is not true : O domínio 'www.globo.com' não foi encontrado\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "FAILED (failures=1)\n"
+      ".\n----------------------------------------------------------------------\nRan 1 test in 0.715s\n\nOK\n"
      ]
     }
    ],
