request url and discover links

--- a/tp1_crawler/Coding Dojo - Crawler.ipynb
+++ b/tp1_crawler/Coding Dojo - Crawler.ipynb
@@ -391,11 +391,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      ".\n----------------------------------------------------------------------\nRan 1 test in 0.000s\n\nOK\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m crawler.scheduler_test SchedulerTest.test_init"
+    "!python -m crawler.scheduler_test SchedulerTest.test_init"
    ]
   },
   {
@@ -421,11 +429,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      ".\n----------------------------------------------------------------------\nRan 1 test in 0.851s\n\nOK\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m crawler.page_fetcher_test PageFetcherTest.test_request_url"
+    "!python -m crawler.page_fetcher_test PageFetcherTest.test_request_url"
    ]
   },
   {
@@ -441,21 +457,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup\n",
-    "\n"
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Simulação da extração de links da página http://www.pudim.com.br na profundidade nível 2...\n",
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m crawler.page_fetcher_test PageFetcherTest.test_discover_links"
+    "!python -m crawler.page_fetcher_test PageFetcherTest.test_discover_links"
    ]
   },
   {
