--- a/tp1_crawler/Coding Dojo - Crawler - Kelly.ipynb
+++ b/tp1_crawler/Coding Dojo - Crawler - Kelly.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,8 +286,9 @@
     "                                                (urlparse(\"http://www.globo.com/noticia_dois\"),3),\n",
     "                                                (urlparse(\"http://www.globo.com/noticia_tres\"),3),\n",
     "                                                ],\n",
-    "                            Domain(\"www.cnpq.br\",10):[(urlparse(\"http://www.cnpq.br/pesquisadores\"),1),\n",
-    "                                               (urlparse(\"http://www.cnpq.br/bolsas\"),1)]\n",
+    "                            Domain(\"www.cnpq.br\",10):[\n",
+    "                                                (urlparse(\"http://www.cnpq.br/pesquisadores\"),1),\n",
+    "                                                (urlparse(\"http://www.cnpq.br/bolsas\"),1)]\n",
     "                          }"
    ]
   },
@@ -336,11 +337,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Verificação da ordem das URLs...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 20.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resgatando a segunda página do mesmo dominio...\n",
+      "Tempo esperado: 20 segundos\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m crawler.scheduler_test SchedulerTest.test_add_remove_page"
+    "!python -m crawler.scheduler_test SchedulerTest.test_add_remove_page"
    ]
   },
   {
@@ -352,11 +380,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 1.320s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m crawler.scheduler_test SchedulerTest.test_can_fetch"
+    "!python -m crawler.scheduler_test SchedulerTest.test_can_fetch"
    ]
   },
   {
@@ -368,11 +408,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.000s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m crawler.scheduler_test SchedulerTest.test_init"
+    "!python -m crawler.scheduler_test SchedulerTest.test_init"
    ]
   },
   {
@@ -398,11 +450,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.929s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m crawler.page_fetcher_test PageFetcherTest.test_request_url"
+    "!python -m crawler.page_fetcher_test PageFetcherTest.test_request_url"
    ]
   },
   {
@@ -418,12 +482,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup\n",
-    "\n"
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
@@ -432,7 +495,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python3 -m crawler.page_fetcher_test PageFetcherTest.test_discover_links"
+    "!python -m crawler.page_fetcher_test PageFetcherTest.test_discover_links"
    ]
   },
   {
@@ -484,6 +547,9 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "cbb0cc346e9fddfbb7b4c2f92bcfa700b57fe5de06a2ba62d497a03cff257fd0"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
