--- a/tp1_crawler/Coding Dojo - Crawler - Kelly.ipynb
+++ b/tp1_crawler/Coding Dojo - Crawler - Kelly.ipynb
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,9 +491,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulação da extração de links da página http://www.pudim.com.br na profundidade nível 2...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.003s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "!python -m crawler.page_fetcher_test PageFetcherTest.test_discover_links"
    ]
@@ -525,10 +544,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.nytimes.com\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://www.reddit.com\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://www.em.com.br\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://theclutch.com.br\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://www.multiversomais.com\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://www.cnnbrasil.com.br\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://www.nytimes.com/#site-content\n",
+      "Profundidade 1\n",
+      "\n",
+      "https://cn.nytimes.com\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://myaccount.nytimes.com/auth/login?response_type=cookie&client_id=vi\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://cooking.nytimes.com\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://timesmachine.nytimes.com/browser\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://store.nytimes.com/\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://nytlicensing.com/\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://help.nytimes.com/hc/en-us/sections/115003859548-Apps\n",
+      "Profundidade 0\n",
+      "\n",
+      "http://eedition.nytimes.com/cgi-bin/signup.cgi?cc=37FYY\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://www.nytco.com/\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://nytmediakit.com/\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://www.nytimes.com/#site-index\n",
+      "Profundidade 1\n",
+      "\n",
+      "https://cn.nytimes.com/\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://myaccount.nytimes.com/seg\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://store.nytimes.com/collections/cooking-collection?utm_source=nyt_cooking&utm_medium=referral&utm_campaign=cooking_collection&utm_content=footer\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://help.nytimes.com/hc/en-us/articles/115014792127-Copyright-notice\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://www.nytco.com/careers/\n",
+      "Profundidade 0\n",
+      "\n",
+      "http://nytmediakit.com/\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://www.nytimes.com//\n",
+      "Profundidade 1\n",
+      "\n",
+      "https://cn.nytimes.com//apps\n",
+      "Profundidade 1\n",
+      "\n",
+      "https://myaccount.nytimes.com/membercenter/feedback.html\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://store.nytimes.com//\n",
+      "Profundidade 1\n",
+      "\n",
+      "https://help.nytimes.com/hc/en-us/articles/115015385887-Contact-Us\n",
+      "Profundidade 0\n",
+      "\n",
+      "http://www.nytco.com\n",
+      "Profundidade 0\n",
+      "\n",
+      "https://nytmediakit.com///\n",
+      "Profundidade 1\n",
+      "\n",
+      "Tempo gasto: 284.706581 segundos\n"
+     ]
+    }
+   ],
+   "source": [
+    "from crawler.domain import Domain\n",
+    "from crawler.scheduler import Scheduler\n",
+    "from crawler.page_fetcher import PageFetcher\n",
+    "from urllib.parse import urlparse\n",
+    "from multiprocessing import Process\n",
+    "import datetime\n",
+    "\n",
+    "arr_urls_seeds = [\n",
+    "    \"https://www.nytimes.com\",\n",
+    "    \"https://www.reddit.com\",\n",
+    "    \"https://www.em.com.br\",\n",
+    "    \"https://theclutch.com.br\",\n",
+    "    \"https://www.multiversomais.com\",\n",
+    "    \"https://www.cnnbrasil.com.br\"\n",
+    "]\n",
+    "\n",
+    "scheduler = Scheduler(\"FanyBot\", 30, 5, arr_urls_seeds)\n",
+    "start_time = datetime.datetime.now()\n",
+    "\n",
+    "threads = []\n",
+    "pages_fetchers = []\n",
+    "[pages_fetchers.append(PageFetcher(scheduler)) for a in range(0, 5)]\n",
+    "\n",
+    "for page_fetcher in pages_fetchers:\n",
+    "    thread = Process(page_fetcher.run())\n",
+    "    thread.start()\n",
+    "    threads.append(thread)\n",
+    "\n",
+    "end_time = datetime.datetime.now()\n",
+    "print(f\"Tempo gasto: {(end_time-start_time).total_seconds()} segundos\")"
+   ]
   },
   {
    "cell_type": "markdown",
