--- a/tp2_indexador/TP2 - Dojo - Indice.ipynb
+++ b/tp2_indexador/TP2 - Dojo - Indice.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,11 +81,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': [(term_id:1 doc: 1 freq: 1), (term_id:1 doc: 2 freq: 1)],\n",
+       " 'casa': [(term_id:2 doc: 1 freq: 2), (term_id:2 doc: 2 freq: 1)],\n",
+       " 'verde': [(term_id:3 doc: 1 freq: 1), (term_id:3 doc: 3 freq: 1)],\n",
+       " 'é': [(term_id:4 doc: 1 freq: 1)],\n",
+       " 'uma': [(term_id:5 doc: 1 freq: 1)],\n",
+       " 'bonita': [(term_id:6 doc: 1 freq: 1), (term_id:6 doc: 2 freq: 1)],\n",
+       " 'o': [(term_id:7 doc: 3 freq: 1)],\n",
+       " 'prédio': [(term_id:8 doc: 3 freq: 1)]}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "{\"a\": [TermOccurrence(1,1,1), TermOccurrence(2,1,1)],\n",
+    "{\n",
+    " \"a\": [TermOccurrence(1,1,1), TermOccurrence(2,1,1)],\n",
     " \"casa\": [TermOccurrence(1,2,2), TermOccurrence(2,2,1)],\n",
     " \"verde\": [TermOccurrence(1,3,1), TermOccurrence(3,3,1)],\n",
     " \"é\": [TermOccurrence(1,4,1)],\n",
@@ -117,12 +136,14 @@
    "outputs": [],
    "source": [
     "index = HashIndex()\n",
+    "\n",
     "#indexação do documento 1\n",
     "index.index(\"a\",1,1)\n",
     "index.index(\"casa\",1,2)\n",
     "index.index(\"verde\",1,1)\n",
     "index.index(\"é\",1,1)\n",
     "index.index(\"uma\",1,1)\n",
+    "\n",
     "#indexação do documento 2\n",
     "index.index(\"a\",2,1)\n",
     "index.index(\"casa\",2,1)\n",
@@ -156,20 +177,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======= Indice Gerado ======\n",
+      "casa -> [(term_id:1 doc: 1 freq: 10), (term_id:1 doc: 2 freq: 3)]\n",
+      "vermelho -> [(term_id:2 doc: 1 freq: 3), (term_id:2 doc: 2 freq: 1), (term_id:2 doc: 3 freq: 1)]\n",
+      "verde -> [(term_id:3 doc: 1 freq: 1)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.000s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m index.index_structure_test StructureTest.test_vocabulary"
+    "!python -m index.index_structure_test StructureTest.test_vocabulary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======= Indice Gerado ======\n",
+      "casa -> [(term_id:1 doc: 1 freq: 10), (term_id:1 doc: 2 freq: 3)]\n",
+      "vermelho -> [(term_id:2 doc: 1 freq: 3), (term_id:2 doc: 2 freq: 1), (term_id:2 doc: 3 freq: 1)]\n",
+      "verde -> [(term_id:3 doc: 1 freq: 1)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.000s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m index.index_structure_test StructureTest.test_document_count"
+    "!python -m index.index_structure_test StructureTest.test_document_count"
    ]
   },
   {
@@ -188,11 +253,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======= Indice Gerado ======\n",
+      "casa -> [(term_id:1 doc: 1 freq: 10), (term_id:1 doc: 2 freq: 3)]\n",
+      "vermelho -> [(term_id:2 doc: 1 freq: 3), (term_id:2 doc: 2 freq: 1), (term_id:2 doc: 3 freq: 1)]\n",
+      "verde -> [(term_id:3 doc: 1 freq: 1)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.000s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m index.index_structure_test StructureTest.test_get_occurrence_list"
+    "!python -m index.index_structure_test StructureTest.test_get_occurrence_list"
    ]
   },
   {
@@ -204,11 +291,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======= Indice Gerado ======\n",
+      "casa -> [(term_id:1 doc: 1 freq: 10), (term_id:1 doc: 2 freq: 3)]\n",
+      "vermelho -> [(term_id:2 doc: 1 freq: 3), (term_id:2 doc: 2 freq: 1), (term_id:2 doc: 3 freq: 1)]\n",
+      "verde -> [(term_id:3 doc: 1 freq: 1)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.000s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m index.index_structure_test StructureTest.test_document_count_with_term"
+    "!python -m index.index_structure_test StructureTest.test_document_count_with_term"
    ]
   },
   {
