pt. 4 - eq and lt

--- a/tp2_indexador/TP2 - Dojo - Indice.ipynb
+++ b/tp2_indexador/TP2 - Dojo - Indice.ipynb
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Atividade 3 - Implementação da classe HashIndex: ** O HashIndex deverá fazer um índice em memória.\n",
+    "**Atividade 3 - Implementação da classe HashIndex:** O HashIndex deverá fazer um índice em memória.\n",
     "\n",
     "Como exemplo, caso tenhamos três documentos $d_1 = $\"A casa verde é uma casa bonita\", $d_2 = $\"A casa bonita\" e $d_3 =$\"O prédio verde\", caso não haja remoção de _stopwords_ nem acentos, o atributo `dic_index` deverá possuir a seguinte estrutura:"
    ]
@@ -331,9 +331,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultado obtido: False - esperado: False\n",
+      "Resultado obtido: True - esperado: True\n",
+      "Resultado obtido: False - esperado: False\n",
+      "Resultado obtido: False - esperado: False\n",
+      "Resultado obtido: True - esperado: True\n",
+      "Resultado obtido: False - esperado: False\n",
+      "Resultado obtido: True - esperado: True\n",
+      "Resultado obtido: False - esperado: False\n",
+      "Resultado obtido: False - esperado: False\n"
+     ]
+    }
+   ],
    "source": [
     "from index.structure import *\n",
     "t1 = TermOccurrence(1,1,2)\n",
@@ -372,9 +388,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': term_id: 1, doc_count_with_term: 2, term_file_start_pos: 0,\n",
+       " 'casa': term_id: 2, doc_count_with_term: 2, term_file_start_pos: 20,\n",
+       " 'verde': term_id: 3, doc_count_with_term: 2, term_file_start_pos: 40,\n",
+       " 'é': term_id: 4, doc_count_with_term: 1, term_file_start_pos: 60,\n",
+       " 'uma': term_id: 5, doc_count_with_term: 1, term_file_start_pos: 70,\n",
+       " 'bonita': term_id: 6, doc_count_with_term: 2, term_file_start_pos: 80,\n",
+       " 'o': term_id: 7, doc_count_with_term: 1, term_file_start_pos: 100,\n",
+       " 'prédio': term_id: 8, doc_count_with_term: 1, term_file_start_pos: 110}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "{\"a\": TermFilePosition(1, 0, 2), \n",
     " \"casa\": TermFilePosition(2, 20, 2), \n",
@@ -384,9 +418,7 @@
     " \"bonita\": TermFilePosition(6, 80, 2), \n",
     " \"o\": TermFilePosition(7, 100, 1), \n",
     " \"prédio\": TermFilePosition(8, 110, 1), \n",
-    "}\n",
-    "\n",
-    "\n"
+    "}"
    ]
   },
   {
@@ -398,9 +430,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(term_id:1 doc: 1 freq: 1),\n",
+       " (term_id:1 doc: 2 freq: 1),\n",
+       " (term_id:2 doc: 1 freq: 2),\n",
+       " (term_id:2 doc: 2 freq: 1),\n",
+       " (term_id:3 doc: 1 freq: 1),\n",
+       " (term_id:3 doc: 3 freq: 1),\n",
+       " (term_id:4 doc: 1 freq: 1),\n",
+       " (term_id:5 doc: 1 freq: 1),\n",
+       " (term_id:6 doc: 1 freq: 1),\n",
+       " (term_id:6 doc: 2 freq: 1),\n",
+       " (term_id:7 doc: 3 freq: 1),\n",
+       " (term_id:8 doc: 3 freq: 1)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[TermOccurrence(1,1,1), \n",
     " TermOccurrence(2,1,1), \n",
@@ -461,9 +515,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "4\n",
+      "número: 100\n"
+     ]
+    }
+   ],
    "source": [
     "x = 100\n",
     "with open(\"xuxu.idx\",\"wb\") as file:\n",
@@ -489,7 +553,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Atividade 7 - método save_tmp_occurrences: ** Implemente o método `save_tmp_occurrences`. Esse método deverá salvar a lista `lst_occurrences_tmp` em arquivo de forma ordenada, conforme explicado anteriormente. Neste método, você não precisa preocupar com o atributo `dic_index`. Leve em consideração os seguintes atributos/métodos:\n",
+    "**Atividade 7 - método save_tmp_occurrences:** Implemente o método `save_tmp_occurrences`. Esse método deverá salvar a lista `lst_occurrences_tmp` em arquivo de forma ordenada, conforme explicado anteriormente. Neste método, você não precisa preocupar com o atributo `dic_index`. Leve em consideração os seguintes atributos/métodos:\n",
     "\n",
     "- `idx_file_counter`:  No código, você irá criar sempre novos indices, excluindo o antigo. Este atributo será útil para definirmos o nome do arquivo do índice. O novo arquivo do índice chamará `occur_index_X` em que $X$ é o número do mesmo. \n",
     "- `str_idx_file_name`: Atributo que armazena o arquivo indice atual. A primeira vez que executarmos `save_tmp_occurrences` não haverá arquivo criado e, assim `str_idx_file_name = None`\n",
@@ -518,7 +582,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Atividade 8: método finish_indexing: ** Agora, com as ocorrências organizadas no arquivo por termo, você deverá implementar o método `finish_indexing` para atualizar o atributo `dic_index` com a posição inicial e quantidade de documentos de cada termo nas suas instancias `TermFilePosition`. Logo após, execute o teste unitário abaixo."
+    "**Atividade 8: método finish_indexing:** Agora, com as ocorrências organizadas no arquivo por termo, você deverá implementar o método `finish_indexing` para atualizar o atributo `dic_index` com a posição inicial e quantidade de documentos de cada termo nas suas instancias `TermFilePosition`. Logo após, execute o teste unitário abaixo."
    ]
   },
   {
@@ -534,7 +598,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Atividade 9 - implementação em `FileIndex` dos métodos abstratos da classe Index: ** Como vocês perceberam, `FileIndex` é subclasse de `Index`. Assim,  precisamos implementar os métodos abstratos da classe `Index`:\n",
+    "**Atividade 9 - implementação em `FileIndex` dos métodos abstratos da classe Index:** Como vocês perceberam, `FileIndex` é subclasse de `Index`. Assim,  precisamos implementar os métodos abstratos da classe `Index`:\n",
     "\n",
     "- `create_index_entry`: no `FileIndex` para criar uma nova entrada no índice, você deverá retornar uma instancia de `TermFilePosition` para este novo `term_id`. Ao criá-lo, você não precisa de definir a posição inicial do arquivo nem a quantidade de documentos. Conforme vocês implementaram nas atividades anteriores, isso é feito apenas no momento de finalização da indexação;\n",
     "- `add_index_occur`: Neste caso, você deverá criar e adicionar uma nova ocorrencia na lista de ocorrencias temporárias `lst_occurrences_tmp` e, caso senha passado o limite `FileIndex.TMP_OCCURRENCES_LIMIT` do número máximo de ocorrencias na lista, chamar o método `save_tmp_occurrence`.\n",
@@ -558,7 +622,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python3 -m index.index_structure_test  FileStructureTest.test_document_count_with_term"
+    "!python -m index.index_structure_test  FileStructureTest.test_document_count_with_term"
    ]
   },
   {
@@ -567,7 +631,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python3 -m index.index_structure_test  FileStructureTest.test_get_occurrence_list"
+    "!python -m index.index_structure_test  FileStructureTest.test_get_occurrence_list"
    ]
   },
   {
@@ -662,7 +726,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Atividade 11 - Limpeza dos dados com a classe Cleaner: ** A classe `Cleaner` é responsável por preprocessar o conteúdo HTML para que ele esteja preparado para indexação. Essa classe tem alguns _flags_ para definir se algum tipo de processamento opcional será feito (por exemplo, _stemming_ e remoção de _stopwords_). Para isso, você deverá implementar pequenos métodos para fazer a limpeza. Esses códigos são pequenos pois temos lindas APIs para nos ajudar 💕. Você irá fazer o processamento básico e, se quiser, pode melhorar a implementação criando exceções na remoção de acentos e não retirando maiúsculas e minúsculas de certas palavras e unindo palavras compostas, por exemplo."
+    "**Atividade 11 - Limpeza dos dados com a classe Cleaner:** A classe `Cleaner` é responsável por preprocessar o conteúdo HTML para que ele esteja preparado para indexação. Essa classe tem alguns _flags_ para definir se algum tipo de processamento opcional será feito (por exemplo, _stemming_ e remoção de _stopwords_). Para isso, você deverá implementar pequenos métodos para fazer a limpeza. Esses códigos são pequenos pois temos lindas APIs para nos ajudar 💕. Você irá fazer o processamento básico e, se quiser, pode melhorar a implementação criando exceções na remoção de acentos e não retirando maiúsculas e minúsculas de certas palavras e unindo palavras compostas, por exemplo."
    ]
   },
   {
@@ -671,7 +735,7 @@
    "source": [
     "Para cada tarefa, há um método para ser criado a seguir os testes iniciais serão feitos aqui no Jupyter. Não esqueça de reiniciar o kernel sempre que alterar algo no código. Logo após, haverá um [teste de integração](https://en.wikipedia.org/wiki/Integration_testing) para avaliar a indexação como um todo.\n",
     "\n",
-    "- **Transformação de HTML para texto: ** Na limpeza dos dados, iremos remover tudo que não será indexado - ou seja, o código HTML. Para isso, iremos implementar o método `html_to_plain_text` que transformará o HTML em texto corrido. Você pode utilizar o [BeautifulSoup](https://www.crummy.com/software/BeautifulSoup/bs4/doc/) para isso e o método get_text. "
+    "- **Transformação de HTML para texto:** Na limpeza dos dados, iremos remover tudo que não será indexado - ou seja, o código HTML. Para isso, iremos implementar o método `html_to_plain_text` que transformará o HTML em texto corrido. Você pode utilizar o [BeautifulSoup](https://www.crummy.com/software/BeautifulSoup/bs4/doc/) para isso e o método get_text. "
    ]
   },
   {
@@ -755,7 +819,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Atividade 12 - Classe HTMLIndexer - método text_word_count: **  Você deverá implementar o método `text_word_count`, a partir de um texto. Esse método retorna um dicionário em que, para cada palavra no texto, será apresentado sua frequência. Considere que o texto já está limpo e é necessário fazer apenas o processamento das palavras.\n",
+    "**Atividade 12 - Classe HTMLIndexer - método text_word_count:**  Você deverá implementar o método `text_word_count`, a partir de um texto. Esse método retorna um dicionário em que, para cada palavra no texto, será apresentado sua frequência. Considere que o texto já está limpo e é necessário fazer apenas o processamento das palavras.\n",
     "\n",
     "Para isso, você deverá:  dividir o texto em tokens (que, no nosso caso, são as palavras e pontuações); preprocessar cada palavra usando o `HTMLIndexer.cleaner`; e, se for uma palavra válida, contabilizá-la. Para isso, será necessário [o método word_tokenize da API NLTK](https://kite.com/python/docs/nltk.word_tokenize)"
    ]
@@ -777,7 +841,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Atividade 13 - método index_text: ** Implemente o método `index_text` que deverá (1) converter o HTML para texto simples usando `HTMLIndexer.cleaner`; (2) converter o texto em um dicionário de ocorrencias de palavras com sua frequencia (metodo da atividade 12); e (3) indexar cada palavra deste dicionário."
+    "**Atividade 13 - método index_text:** Implemente o método `index_text` que deverá (1) converter o HTML para texto simples usando `HTMLIndexer.cleaner`; (2) converter o texto em um dicionário de ocorrencias de palavras com sua frequencia (metodo da atividade 12); e (3) indexar cada palavra deste dicionário."
    ]
   },
   {
@@ -824,7 +888,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python3 -m index.indexer_test IndexerTest.test_indexer"
+    "!python -m index.indexer_test IndexerTest.test_indexer"
    ]
   },
   {
